--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -27,6 +27,9 @@
               <p:outputLabel for="@next" value="Username" />
               <p:inputText value="#{mailBean.username}" />
 
+              <p:outputLabel for="@next" value="From (Name)" />
+              <p:inputText value="#{mailBean.from}" />
+
               <p:outputLabel for="@next" value="Password" />
               <p:password value="#{mailBean.password}" />
 
